# otel-datadog-tests

./: .env.base  .gitignore  Dockerfile  README.md  docker-compose.yaml  justfile  pyproject.toml  start-nagger.sh  start-worker.sh
src/: base.py  gunicorn.conf.py  nagger.py  patch.py  worker.py
